jt-jiffle/jt-jiffle-language/src/test/resources/it/geosolutions/jaiext/jiffle/parser/InitBlockDuplicateVar.jfl
init {
  foo = 1;
  foo;  // error: duplicate declaration
}

dest = foo;
